jwt设置为只拦截后台页面、归档页面的功能、后台用户管理、标签管理、用户资源管理

--- a/boke/src/main/resources/static/style/css/main.css
+++ b/boke/src/main/resources/static/style/css/main.css
@@ -1964,7 +1964,7 @@ pre .javascript .function, pre .keyword {
     position: relative;
     padding: 20px 10px;
     color: #999;
-    text-align: center
+    text-align: center;
 }
 
 .site-overview-wrap {
