--- a/boke/src/main/resources/static/style/css/lazyload.css
+++ b/boke/src/main/resources/static/style/css/lazyload.css
@@ -9245,7 +9245,6 @@ progress {
 }
 
 .art-content #archives .al_mon_list {
-    position: relative;
     padding: 10px 0;
     display: inline-block;
     vertical-align: middle
@@ -9337,7 +9336,7 @@ progress {
 }
 
 .art-content #archives .al_mon_list:before {
-    max-height: 100%;
+    max-height: 10px;
     height: 100%;
     width: 4px;
     background: #6ecaf5;
