--- a/boke/src/main/resources/templates/end/link.html
+++ b/boke/src/main/resources/templates/end/link.html
@@ -1,50 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="theme-next pisces" lang="zh_CN" xmlns:th="http://www.thymeleaf.org"
+      xmlns:v-bind="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
     <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate">
     <meta HTTP-EQUIV="expires" CONTENT="0">
     <title>资源管理</title>
-    <link rel="stylesheet" href="../../css/element.css">
-    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../font-blog/css/element.css">
+    <link rel="stylesheet" href="../font-blog/css/base.css">
 </head>
 <body>
 <div id="wrapper" v-cloak>
     <div style="padding-bottom: 10px">
-            <el-breadcrumb separator-class="el-icon-arrow-right">
-                <el-breadcrumb-item @click.native="parent.changeIndex('index')">首页</el-breadcrumb-item>
-                <el-breadcrumb-item>资源管理</el-breadcrumb-item>
-            </el-breadcrumb>
-        </div>
+        <el-breadcrumb separator-class="el-icon-arrow-right">
+            <el-breadcrumb-item @click.native="parent.changeIndex('index')">首页</el-breadcrumb-item>
+            <el-breadcrumb-item>资源管理</el-breadcrumb-item>
+        </el-breadcrumb>
+    </div>
 
-        <div style="height: 1px; margin: 10px 0; background-color: white"></div>
-    <el-input v-model="search" style="width: 20%;" suffix-icon="el-icon-search" placeholder="请输入名称按回车搜索"
-              @keyup.enter.native="loadTable"></el-input>
+    <div style="height: 1px; margin: 10px 0; background-color: white"></div>
+
+    <el-input v-model="search" style="width: 20%;" suffix-icon="el-icon-search" placeholder="请输入昵称按回车搜索"
+              @keyup.enter.native="loadTablew2"></el-input>
     <el-button @click="add" type="primary" size="mini" style="margin: 10px 0">新增</el-button>
-    <!-- <el-upload action="/files/upload" :on-success="successUpload" :show-file-list="false" style="display: inline-block">
-        <el-button size="mini" type="primary">导入</el-button> -->
-    </el-upload>
-    <!-- <el-button @click="exp" type="primary" size="mini" style="margin: 10px 0">导出</el-button> -->
-    <el-table :data="tableData" border stripe style="width: 100%">
-        <el-table-column type="index" :index="parent.changeXuhao" label="序号" width="100"> </el-table-column>
-        <el-table-column prop="name" label="名称"></el-table-column>
-        <el-table-column prop="url" label="地址"></el-table-column>
-        <el-table-column prop="type" label="类型"></el-table-column>
-
+    <!--                <el-button @click="exp" type="primary" size="mini" style="margin: 10px 0">导出</el-button>-->
+    <el-table
+            :data="tableData"
+            border
+            style="width: 100%">
+        <el-table-column type="index" :index="parent.changeXuhao" label="序号" width="50"></el-table-column>
+        <el-table-column prop="linkName" label="资源名称"></el-table-column>
+        <el-table-column prop="linkUrl" label="资源路径"></el-table-column>
+        <el-table-column prop="" label="资源图片" width="120">
+            <template slot-scope="scope">
+                <el-image style="width: 100px; height: 50px" :src="'../'+scope.row.linkImage" >
+                </el-image>
+            </template>
+        </el-table-column>
+        <el-table-column prop="linkType" label="资源用户id"></el-table-column>
+        
+            <el-table-column prop="username" label="资源用户名称"></el-table-column>
         <el-table-column
-          fixed="right"
-          label="操作"
-          width="200">
-        <template slot-scope="scope">
-          <el-button type="primary" icon="el-icon-edit" circle size='mini' @click="edit(scope.row)"></el-button>
-          <el-popconfirm
-              @onConfirm="del(scope.row.id)"
-              title="确定删除？"
-          >
-            <el-button size='mini' type="danger" icon="el-icon-delete" circle slot="reference" style="margin-left: 10px"></el-button>
-          </el-popconfirm>
-        </template>
+                fixed="right"
+                label="操作"
+                width="150">
+            <template slot-scope="scope">
+                <el-button type="primary" @click="edit(scope.row)"  icon="el-icon-edit" circle size="mini"></el-button>
+                <el-popconfirm
+                        @onConfirm="del(scope.row.linkId)"
+                        title="确定删除？"
+                >
+                    <el-button type="danger" icon="el-icon-delete" circle slot="reference" size="mini"></el-button>
+                </el-popconfirm>
+            </template>
         </el-table-column>
     </el-table>
     <!-- 分页 -->
@@ -52,9 +61,9 @@
         <el-pagination
                 @size-change="handleSizeChange"
                 @current-change="handleCurrentChange"
-                :current-page="pageNum"
+                :current-page="searchParam.pageNum"
                 :page-sizes="[5, 10, 20, 40]"
-                :page-size="pageSize"
+                :page-size="searchParam.pageSize"
                 layout="total, sizes, prev, pager, next, jumper"
                 :total="total">
         </el-pagination>
@@ -63,21 +72,23 @@
     <el-dialog title="资源信息" :visible.sync="dialogFormVisible" width="40%"
                :close-on-click-modal="false">
         <el-form :model="entity">
-            <el-form-item label="名称" label-width="150px">
-                <el-input v-model="entity.name" autocomplete="off" style="width: 80%"></el-input>
+            <el-form-item label="资源名称" label-width="100px">
+                <el-input v-model="entity.linkName" autocomplete="off" style="width: 80%"></el-input>
             </el-form-item>
-            <el-form-item label="地址" label-width="150px">
-                <el-input v-model="entity.url" autocomplete="off" style="width: 80%"></el-input>
+            <el-form-item label="资源路径" label-width="100px">
+                <el-input v-model="entity.linkUrl" autocomplete="off" style="width: 80%"></el-input>
             </el-form-item>
-            <el-form-item label="类型" label-width="150px">
-                <el-select clearable v-model="entity.type" placeholder="请选择" style="width: 80%">
-                    <el-option label="我的足迹" value="我的足迹"></el-option>
-                    <el-option label="资源导航" value="资源导航"></el-option>
-                    <el-option label="项目实战" value="项目实战"></el-option>
-                    <el-option label="友情链接" value="友情链接"></el-option>
+            <el-form-item label="资源图片" label-width="100px">
+                <el-input v-model="entity.linkImage" autocomplete="off" style="width: 80%"></el-input>
+                <el-upload action="http://localhost:81/files/Linkupload" :on-success="fileSuccessUpload" :file-list="fileList">
+                    <el-button size="small" type="primary">上传头像</el-button>
+                </el-upload>
+            </el-form-item>
+            <el-form-item label="关联用户" label-width="100px">
+                <el-select clearable v-model="entity.username" v-value="entity.linkType" placeholder="请选择" style="width: 40%">
+                    <el-option v-for="item in options" :key="item.userName" :label="item.userName" :value="item.userId"></el-option>
                 </el-select>
             </el-form-item>
-
         </el-form>
         <div slot="footer" class="dialog-footer">
             <el-button @click="dialogFormVisible = false">取 消</el-button>
@@ -86,122 +97,114 @@
     </el-dialog>
 </div>
 
-<script src="../../js/jquery.min.js"></script>
-<script src="../../js/vue.min.js"></script>
-<script src="../../js/element.js"></script>
-<script src="../../js/tinymce/tinymce.min.js"></script>
-
+<script src="../font-blog/js/jquery.min.js"></script>
+<script src="../font-blog/js/vue.min.js"></script>
+<script src="../font-blog/js/element.js"></script>
+<script th:src="@{/plugins/axios/axios.js}"></script>
 
 <script>
 
-    let urlBase = "/api/link/";
+    let urlBase = "/blog/link/AllLinkdmessage";
     new Vue({
         el: "#wrapper",
         data: {
             options: [],
             fileList: [],
-            user: {},
             tableData: [],
-            pageNum: 1,
-            pageSize: 10,
-            total: 0,
+            total: 0,//总数量
             dialogFormVisible: false,
             entity: {},
             isCollapse: false,
+            searchParam : {
+                id:1,
+                pageNum : 1,
+                pageSize : 5, //每页条数
+                search:'',
+            },
             search: '',
         },
         created() {
-            this.user = sessionStorage.getItem("user") ? JSON.parse(sessionStorage.getItem("user")) : {};
             this.loadTable();
+            this. bigClass();
         },
         methods: {
             fileSuccessUpload(res) {
-                this.entity.file = "http://localhost:8888/files/" + res.data;
-                this.entity.img = "http://localhost:8888/files/" + res.data;
+                this.entity.linkImage = "friend/linkimage/" + res.msg;
                 console.log(res)
-            },
-            successUpload(value) {
-                $.get("/api/link/upload/" + value.data).then(res => {
-                    if (res.code === '0') {
-                        this.$message({
-                            message: "导入成功",
-                            type: "success"
-                        });
-                        this.loadTable()
-                    }
-                })
-            },
-            changeState(obj, state) {  // 审核
-                this.entity = JSON.parse(JSON.stringify(obj));
-                this.entity.state = state;
-                this.save();
-            },
-            handleCollapse() {
-                this.isCollapse = !this.isCollapse;
-            },
-            logout() {
-                $.get("/api/user/logout");
-                sessionStorage.removeItem("user");
-                location.href = "/page/end/login.html";
+                console.log(this.entity)
             },
             loadTable() {
-                $.get(urlBase + "/page?pageNum=" + this.pageNum + "&pageSize=" + this.pageSize + "&name=" + this.search).then(res => {
-                    this.tableData = res.data.records;
-                    this.total = res.data.total;
+                var self = this;
+                axios.get(urlBase,{params:self.searchParam}).then(function (res) {
+                    self.tableData = res.data.list;
+                    console.log(self.tableData);
+                    //设置总数量
+                    self.total = res.data.total;
                 })
-
-                 // $.get("/api/").then(res => {
-                    // this.options = res.data;
-                 // })
             },
-            exp() {   // excel 导出
-                window.open(urlBase + "/export");
+            loadTablew2() {
+                var self = this;
+                console.log("根据标题搜索友链信息");
+                self.searchParam.search=self.search
+                axios.get("/blog/link/NamePage",{params:self.searchParam
+                }).then(function (res) {
+                    console.log("资源："+self.search);
+                    self.tableData = res.data.list;
+                    console.log(self.tableData);
+                    //设置总数量
+                    self.total = res.data.total;
+                })
             },
             handleSizeChange(pageSize) {
-                this.pageSize = pageSize;
+                this.searchParam.pageSize = pageSize;
                 this.loadTable();
             },
             handleCurrentChange(pageNum) {
-                this.pageNum = pageNum;
+                this.searchParam.pageNum = pageNum;
                 this.loadTable();
             },
             add() {
                 this.entity = {};
-                this.fileList = [];
                 this.dialogFormVisible = true;
             },
             save() {
-                let type = this.entity.id ? "PUT" : "POST";
+                var self = this;
+                let type = self.entity.linkId ? "PUT" : "POST";
                 $.ajax({
-                    url: urlBase,
+                    url: "/blog/link/LinkOper",
                     type: type,
                     contentType: "application/json",
-                    data: JSON.stringify(this.entity)
+                    data: JSON.stringify(self.entity)
                 }).then(res => {
                     if (res.code === '0') {
-                        this.$message({
+                        self.$message({
                             message: "保存成功",
                             type: "success"
                         });
                     } else {
-                        this.$message({
+                        self.$message({
                             message: res.msg,
                             type: "error"
                         })
                     }
-                    this.loadTable();
-                    this.dialogFormVisible = false;
+                    self.loadTable();
+                    self.dialogFormVisible = false;
                 })
             },
             edit(obj) {
+                this.entity = {};
                 this.entity = JSON.parse(JSON.stringify(obj));
                 this.fileList = [];
                 this.dialogFormVisible = true;
             },
             del(id) {
+                console.log("id="+id);
                 $.ajax({
-                    url: urlBase + id,
-                    type: "delete"
+                    url: "/blog/link/delteComment",
+                    type: "get",
+                    data: {	// 请求参数放在请求体
+                        id: id
+                    }
                 }).then(res => {
                     if (res.code === '0') {
                         this.$message({
@@ -215,6 +218,13 @@
                             type: "error"
                         })
                     }
+                })
+
+            },bigClass(){
+                $.get("/user/AllUser").then(res => {    //获取所有的用户(这里说是有多个用户实际上就只有我一个的，个人用户懒得搞权限划分了，反正网站也不可能扩大开来)
+                    this.options = res;
+                    console.log("标签");
+                    console.log(self.options);
                 })
             }
         }
