--- a/boke/src/main/resources/templates/end/user.html
+++ b/boke/src/main/resources/templates/end/user.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="theme-next pisces" lang="zh_CN" xmlns:th="http://www.thymeleaf.org"
+      xmlns:v-bind="http://www.w3.org/1999/xhtml" xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta HTTP-EQUIV="pragma" CONTENT="no-cache">
     <meta HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate">
     <meta HTTP-EQUIV="expires" CONTENT="0">
     <title>用户管理</title>
-    <link rel="stylesheet" href="../../css/element.css">
-    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="../font-blog/css/element.css">
+    <link rel="stylesheet" href="../font-blog/css/base.css">
 </head>
 <body>
 <div id="wrapper" v-cloak>
@@ -20,20 +21,19 @@
 
     <div style="height: 1px; margin: 10px 0; background-color: white"></div>
 
-    <el-input v-model="search" style="width: 20%;" suffix-icon="el-icon-search" placeholder="请输入名称按回车搜索" @keyup.enter.native="loadTable"></el-input>
-    <el-button @click="add" type="primary" size="mini" style="margin: 10px 0">新增</el-button>
+    <el-input v-model="search" style="width: 20%;" suffix-icon="el-icon-search" placeholder="请输入昵称按回车搜索"
+              @keyup.enter.native="loadTablew2"></el-input>
     <!--                <el-button @click="exp" type="primary" size="mini" style="margin: 10px 0">导出</el-button>-->
     <el-table
             :data="tableData"
             border
             style="width: 100%">
+
         <el-table-column type="index" :index="parent.changeXuhao" label="序号" width="50"></el-table-column>
-        <el-table-column prop="username" label="用户名"></el-table-column>
-        <el-table-column prop="nickName" label="昵称"></el-table-column>
-        <el-table-column prop="email" label="邮箱"></el-table-column>
-        <el-table-column prop="phone" label="电话"></el-table-column>
-        <el-table-column prop="age" label="年龄"></el-table-column>
-        <el-table-column prop="address" label="地址"></el-table-column>
+        <el-table-column prop="userdatanames" label="用户名"></el-table-column>
+        <el-table-column prop="userEmail" label="邮箱"></el-table-column>
+        <el-table-column prop="userpermission" label="权限"></el-table-column>
+        <el-table-column prop="userBirthdaydate" label="出生日期"></el-table-column>
         <el-table-column
                 fixed="right"
                 label="操作"
@@ -41,7 +41,7 @@
             <template slot-scope="scope">
                 <el-button type="primary" @click="edit(scope.row)"  icon="el-icon-edit" circle size="mini"></el-button>
                 <el-popconfirm
-                        @onConfirm="del(scope.row.id)"
+                        @onConfirm="del(scope.row.userinfoId,scope.row.userId)"
                         title="确定删除？"
                 >
                     <el-button type="danger" icon="el-icon-delete" circle slot="reference" size="mini"></el-button>
@@ -54,9 +54,9 @@
         <el-pagination
                 @size-change="handleSizeChange"
                 @current-change="handleCurrentChange"
-                :current-page="pageNum"
+                :current-page="searchParam.pageNum"
                 :page-sizes="[5, 10, 20, 40]"
-                :page-size="pageSize"
+                :page-size="searchParam.pageSize"
                 layout="total, sizes, prev, pager, next, jumper"
                 :total="total">
         </el-pagination>
@@ -66,22 +66,29 @@
                :close-on-click-modal="false">
         <el-form :model="entity">
             <el-form-item label="用户名" label-width="100px">
-                <el-input v-model="entity.username" autocomplete="off" style="width: 80%"></el-input>
+                <el-input v-model="entity.userdatanames" autocomplete="off" style="width: 80%"></el-input>
             </el-form-item>
-            <el-form-item label="昵称" label-width="100px">
-                <el-input v-model="entity.nickName" autocomplete="off" style="width: 80%"></el-input>
+            <el-form-item label="密码" label-width="100px">
+                <el-input v-model="entity.userPassword" autocomplete="off" style="width: 80%"></el-input>
             </el-form-item>
             <el-form-item label="邮箱" label-width="100px">
-                <el-input v-model="entity.email" autocomplete="off" style="width: 80%"></el-input>
+                <el-input v-model="entity.userEmail" autocomplete="off" style="width: 80%"></el-input>
             </el-form-item>
-            <el-form-item label="电话" label-width="100px">
-                <el-input v-model="entity.phone" autocomplete="off" style="width: 80%"></el-input>
+            <el-form-item label="权限" label-width="100px">
+                <el-select clearable v-model="entity.userpermission" placeholder="请选择" style="width: 80%">
+                    <el-option label="host" value="host"></el-option>
+                    <el-option label="initial" value="initial"></el-option>
+                </el-select>
             </el-form-item>
-            <el-form-item label="年龄" label-width="100px">
-                <el-input v-model="entity.age" autocomplete="off" style="width: 80%"></el-input>
-            </el-form-item>
-            <el-form-item label="地址" label-width="100px">
-                <el-input v-model="entity.address" autocomplete="off" style="width: 80%"></el-input>
+            <el-form-item label="出生日期" label-width="100px">
+<!--                <input  id="birthday" type="text"  readonly class="textBox flexDate" v-bind:placeholder="entity.userBirthdaydate">-->
+                <div class="block">
+                    <el-date-picker
+                            v-model="entity.userBirthdaydate"
+                            type="datetime"
+                            placeholder="选择日期时间">
+                    </el-date-picker>
+                </div>
             </el-form-item>
 <!--            <el-form-item label="密码" label-width="100px">-->
 <!--                <el-input v-model="entity.password" show-password autocomplete="off" style="width: 80%"></el-input>-->
@@ -94,63 +101,70 @@
     </el-dialog>
 </div>
 
-<script src="../../js/jquery.min.js"></script>
-<script src="../../js/vue.min.js"></script>
-<script src="../../js/element.js"></script>
-<script src="../../js/tinymce/tinymce.min.js"></script>
-
+<script src="../font-blog/js/jquery.min.js"></script>
+<script src="../font-blog/js/vue.min.js"></script>
+<script src="../font-blog/js/element.js"></script>
+<script src="../font-blog/js/tinymce/tinymce.min.js"></script>
+<script th:src="@{/plugins/axios/axios.js}"></script>
 
 <script>
 
-    let urlBase = "/api/user/";
+    let urlBase = "/user/AllUsermessage";
     new Vue({
         el: "#wrapper",
         data: {
-            user: {},
+            options: [],
+            fileList: [],
             tableData: [],
-            pageNum: 1,
-            pageSize: 10,
-            total: 0,
+            total: 0,//总数量
             dialogFormVisible: false,
             entity: {},
             isCollapse: false,
+            searchParam : {
+                id:1,
+                pageNum : 1,
+                pageSize : 5, //每页条数
+                search:'',
+            },
             search: '',
-            options: [],
-            props: [{"label":"用户名","prop":"username"},{"label":"邮箱","prop":"email"},{"label":"电话","prop":"phone"}]
         },
         created() {
-            this.user = sessionStorage.getItem("user") ? JSON.parse(sessionStorage.getItem("user")) : {};
             this.loadTable();
         },
         methods: {
-            // changeRole(row) {
-            //     this.entity = JSON.parse(JSON.stringify(row));
-            //     this.save();
-            // },
-            handleCollapse() {
-                this.isCollapse = !this.isCollapse;
-            },
-            logout() {
-                // 请求退出接口
-                $.get("/api/user/logout");
-                localStorage.removeItem("user");
-                location.href = "/page/end/login.html";
+            fileSuccessUpload(res) {
+                this.entity.portrait = "friend/fileimage/" + res.msg;
+                console.log(res)
+                console.log(this.entity)
             },
             loadTable() {
-                $.get(urlBase + "/page?pageNum=" + this.pageNum + "&pageSize=" + this.pageSize + "&name=" + this.search).then(res => {
-                    this.tableData = res.data.records;
-                    this.total = res.data.total;
-                });
+                var self = this;
+                axios.get(urlBase,{params:self.searchParam}).then(function (res) {
+                    self.tableData = res.data.list;
+                    console.log(self.tableData);
+                    //设置总数量
+                    self.total = res.data.total;
+                })
             },
-            exp() {
-                window.open(urlBase + "/export");
+            loadTablew2() {
+                var self = this;
+                console.log("根据标题搜索用户信息");
+                self.searchParam.search=self.search
+                axios.get("/user/NamePage",{params:self.searchParam
+                }).then(function (res) {
+                    console.log("用户信息："+self.search);
+                    self.tableData = res.data.list;
+                    console.log(self.tableData);
+                    //设置总数量
+                    self.total = res.data.total;
+                })
             },
             handleSizeChange(pageSize) {
-                this.pageSize = pageSize;
+                this.searchParam.pageSize = pageSize;
                 this.loadTable();
             },
             handleCurrentChange(pageNum) {
-                this.pageNum = pageNum;
+                this.searchParam.pageNum = pageNum;
                 this.loadTable();
             },
             add() {
@@ -158,49 +172,48 @@
                 this.dialogFormVisible = true;
             },
             save() {
-                if (!this.entity.username) {
-                    this.$message({
-                        message: "请填写用户名",
-                        type: "warning"
-                    });
-                    return
-                }
-                let type = this.entity.id ? "PUT" : "POST";
+                var self = this;
+                console.log(self.entity)
                 $.ajax({
-                    url: urlBase,
-                    type: type,
+                    url: "/user/UserOper",
+                    type: "PUT",
                     contentType: "application/json",
-                    data: JSON.stringify(this.entity)
+                    data: JSON.stringify(self.entity)
                 }).then(res => {
                     if (res.code === '0') {
-                        this.$message({
+                        self.$message({
                             message: "保存成功",
                             type: "success"
                         });
-                        this.loadTable();
                     } else {
-                        this.$message({
+                        self.$message({
                             message: res.msg,
                             type: "error"
                         })
                     }
-                    this.dialogFormVisible = false;
+                    self.loadTable();
+                    self.dialogFormVisible = false;
                 })
             },
             edit(obj) {
                 this.entity = JSON.parse(JSON.stringify(obj));
+                this.fileList = [];
                 this.dialogFormVisible = true;
             },
-            del(id) {
+            del(id,infoid) {
                 $.ajax({
-                    url: urlBase + id,
-                    type: "delete"
+                    url: "/user/delteComment",
+                    type: "get",
+                    data: {	// 请求参数放在请求体
+                        id: id,
+                        infoid:infoid
+                    }
                 }).then(res => {
                     if (res.code === '0') {
                         this.$message({
                             message: "删除成功",
                             type: "success"
-                        });
+                        })
                         this.loadTable();
                     } else {
                         this.$message({
@@ -213,5 +226,6 @@
         }
     })
 </script>
+
 </body>
 </html>
