--- a/boke/src/main/resources/templates/login.html
+++ b/boke/src/main/resources/templates/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="font-blog/base.css">
     <link rel="stylesheet" href="font-blog/element.css">
 </head>
-<body style="background:url('style/images/blhx.png') no-repeat; background-size: cover;">
+<body style="background:url(/style/images/blhx.png) no-repeat; background-size: cover;">
 <div id="wrapper">
     <div style="width: 400px; margin: 150px auto; background-color:rgba(237,116,113,0.5); border-radius: 10px">
         <div style="width: 100%; height: 100px; font-size: 30px;line-height: 100px; text-align: center; color: #eee">欢迎登录墨白的博客系统</div>
@@ -84,8 +84,10 @@
                             /*location.href= "/redirec/";*/
                             const token = res.data.message;
                             /*将token设置到localStorage本地存储*/
-                            window.localStorage.setItem('user-Token', token);
-                            window.location.pathname = '/redirec/';
+                            //window.localStorage.setItem('user-Token', token);
+                            //存储到cookie中
+                            document.cookie='baitoken='+token;
+                            window.location.pathname = '/index';
                     }, 1000)
                     } else if(res.data.code==401){
                         alert(res.data.message);
