’关于我‘页面的前后台，log4j的配置

--- a/boke/src/main/resources/static/font-blog/css/base.css
+++ b/boke/src/main/resources/static/font-blog/css/base.css
@@ -73,7 +73,7 @@ button {
 }
 /*elementUI样式调整*/
 [v-cloak] {
-    display: none;
+    display: none !important;
 }
 .el-header {
     padding-left: 0;
