--- a/boke/src/main/resources/static/style/css/lazyload.css
+++ b/boke/src/main/resources/static/style/css/lazyload.css
@@ -8347,8 +8347,9 @@ button.botui-actions-buttons-button {
 }
 
 .logolink a:hover .no {
-    -webkit-animation: spin 1.5s linear infinite;
-    animation: spin 1.5s linear infinite
+    /*设置字体旋转*/
+    /*-webkit-animation: spin 1.5s linear infinite;*/
+    /*animation: spin 1.5s linear infinite*/
 }
 
 .logolink ruby {
