--- a/boke/src/main/resources/templates/common.html
+++ b/boke/src/main/resources/templates/common.html
@@ -39,6 +39,7 @@
     <script th:src="@{/plugins/vue/vuejs-paginate.js}"></script>
     <script th:src="@{/plugins/vue/vue-select.js}"></script>
     <script th:src="@{/plugins/axios/axios.js}"></script>
+    <link rel="stylesheet" href="font-blog/css/base.css">
 <!--    <link href="https://www.itxst.com/package/ant-design-vue/antd.min.css" rel="stylesheet" />-->
     <link href="plugins/antdesignvue/antd.min.css" rel="stylesheet" />
     <!--页面标题显示-->
