--- a/boke/src/main/resources/templates/end/blog_edit.html
+++ b/boke/src/main/resources/templates/end/blog_edit.html
@@ -86,7 +86,7 @@
             tinymce.init({
                 selector: '#mytextarea',
                 language: 'zh_CN',
-                plugins: ['quickbars', 'link', 'table', 'image'], //选择需加载的插件
+                plugins: ['code','quickbars', 'link', 'table', 'image'], //选择需加载的插件
             });
 
             var id = location.search.split("=")[1];
