--- a/boke/src/main/resources/templates/index.html
+++ b/boke/src/main/resources/templates/index.html
@@ -14,8 +14,8 @@
                 <div id="toplan" class="site-header no-select  site-top">
                     <div class="site-branding"><span class="site-title"> <span class="logolink moe-mashiro"> <a
                             href="#" alt="墨白"> <ruby><span class="sakuraso" style="font-family: 仿宋">墨白</span>
-                        <span class="no" style="font-family: 楷体">沉墨</span><span class="shironeko"
-                                                                                style="font-family: 楷体">满纸</span>
+                        <span class="no" style="font-family: 楷体">沉墨</span>
+                        <span class="shironeko" style="font-family: 楷体">满纸</span>
                         <rp style="padding-bottom: 100px"></rp>
                         <rt class="chinese-font">一笑若白</rt>
                         <rp></rp></ruby> </a> </span> </span></div>
@@ -47,7 +47,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="#"><span class="faa-parent animated-hover">
+                                        <a href="/author"><span class="faa-parent animated-hover">
                                             <i class="menu-item-icon fas fa-heartbeat" aria-hidden="true"></i>关于我
                                         </span></a>
                                     </li>
