--- a/boke/src/main/resources/templates/message.html
+++ b/boke/src/main/resources/templates/message.html
@@ -52,7 +52,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="#"><span class="faa-parent animated-hover">
+                                <a href="/author"><span class="faa-parent animated-hover">
                                             <i class="menu-item-icon fas fa-heartbeat" aria-hidden="true"></i>关于我
                                         </span></a>
                             </li>
@@ -273,7 +273,6 @@
 <!--右侧长条线图片-->
 <div class="back-to-top cd-top faa-float animated cd-is-visible" style="top: -900px;"></div>
 <!--    js-->
-<script src="font-blog/js/jquery.min.js"></script>
 <script src="font-blog/js/vue.min.js"></script>
 <script src="font-blog/js/element.js"></script>
 <script src="font-blog/js/tinymce/tinymce.min.js"></script>
